FlexDeploy 6.5.0.10/objects/Case.object
<CustomObject>
   <businessProcesses>
      <fullName>Case Business Process</fullName>
      <isActive>true</isActive>
      <values>
         <fullName>Closed</fullName>
      </values>
      <values>
         <fullName>Escalated</fullName>
      </values>
      <values>
         <fullName>New</fullName>
         <default>true</default>
      </values>
      <values>
         <fullName>Working</fullName>
      </values>
   </businessProcesses>
   <fields>
      <fullName>EngineeringReqNumber__c</fullName>
      <label>Engineering Req Number</label>
      <length>12</length>
      <type>Text</type>
   </fields>
   <fields>
      <fullName>PotentialLiability__c</fullName>
      <label>Potential Liability</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>Product__c</fullName>
      <label>Product</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>GC1040</fullName>
            </value>
            <value>
               <fullName>GC1060</fullName>
            </value>
            <value>
               <fullName>GC3020</fullName>
            </value>
            <value>
               <fullName>GC3040</fullName>
            </value>
            <value>
               <fullName>GC3060</fullName>
            </value>
            <value>
               <fullName>GC5020</fullName>
            </value>
            <value>
               <fullName>GC5040</fullName>
            </value>
            <value>
               <fullName>GC5060</fullName>
            </value>
            <value>
               <fullName>GC1020</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <fields>
      <fullName>SLAViolation__c</fullName>
      <label>SLA Violation</label>
      <type>Picklist</type>
      <valueSet>
         <valueSetDefinition>
            <value>
               <fullName>No</fullName>
            </value>
            <value>
               <fullName>Yes</fullName>
            </value>
         </valueSetDefinition>
      </valueSet>
   </fields>
   <listViews>
      <fullName>AllClosedCases</fullName>
      <columns>CASES.CASE_NUMBER</columns>
      <columns>NAME</columns>
      <columns>CASES.SUBJECT</columns>
      <columns>CASES.STATUS</columns>
      <columns>CASES.PRIORITY</columns>
      <columns>CASES.CREATED_DATE</columns>
      <columns>CORE.USERS.ALIAS</columns>
      <filterScope>Everything</filterScope>
      <filters>
         <field>CASES.CLOSED</field>
         <operation>equals</operation>
         <value>1</value>
      </filters>
      <label>All Closed Cases</label>
   </listViews>
   <listViews>
      <fullName>AllOpenCases</fullName>
      <filterScope>Everything</filterScope>
      <filters>
         <field>CASES.CLOSED</field>
         <operation>equals</operation>
         <value>0</value>
      </filters>
      <label>All Open Cases</label>
   </listViews>
   <listViews>
      <fullName>Lead_Q_Case</fullName>
      <filterScope>Queue</filterScope>
      <label>Lead Qe</label>
      <queue>Lead_Q</queue>
      <sharedTo>
         <allInternalUsers></allInternalUsers>
      </sharedTo>
   </listViews>
   <listViews>
      <fullName>MyCases</fullName>
      <filterScope>Mine</filterScope>
      <label>My Cases</label>
   </listViews>
   <listViews>
      <fullName>MyOpenCases</fullName>
      <filterScope>Mine</filterScope>
      <filters>
         <field>CASES.CLOSED</field>
         <operation>equals</operation>
         <value>0</value>
      </filters>
      <label>My Open Cases</label>
   </listViews>
   <listViews>
      <fullName>Service_Case_Case</fullName>
      <filterScope>Queue</filterScope>
      <label>Service Case</label>
      <queue>Service_Case</queue>
      <sharedTo>
         <allInternalUsers></allInternalUsers>
      </sharedTo>
   </listViews>
   <listViews>
      <fullName>TestCaseAssignee_Case</fullName>
      <filterScope>Queue</filterScope>
      <label>TestCaseAssignee</label>
      <queue>TestCaseAssignee</queue>
      <sharedTo>
         <allInternalUsers></allInternalUsers>
      </sharedTo>
   </listViews>
   <sharingModel>ReadWriteTransfer</sharingModel>
   <validationRules>
      <fullName>Case_Validation_Rule_1</fullName>
      <active>true</active>
      <errorConditionFormula>Subject == NULL</errorConditionFormula>
      <errorDisplayField>Subject</errorDisplayField>
      <errorMessage>Subject is Required</errorMessage>
   </validationRules>
   <validationRules>
      <fullName>Case_Validation_Rule_2</fullName>
      <active>true</active>
      <errorConditionFormula>SuppliedEmail == NULL</errorConditionFormula>
      <errorDisplayField>SuppliedEmail</errorDisplayField>
      <errorMessage>Web Email is Required</errorMessage>
   </validationRules>
</CustomObject>